Fixed spacing between search box and navigation items on desktop

--- a/jupyter_alabaster_theme/static/css/search.css
+++ b/jupyter_alabaster_theme/static/css/search.css
@@ -62,6 +62,7 @@ p.caption {
 /* Sidebar search box */
  #searchbox {
    padding-top: 8px;
+   padding-bottom: 16px;
  }
 
  .docs-search- {
