--- a/jupyter_alabaster_theme/static/pcss/navbar.pcss
+++ b/jupyter_alabaster_theme/static/pcss/navbar.pcss
@@ -62,3 +62,10 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .navbar .navbar-logo {
+    height: 36px;
+    margin-top: 8px;
+  }
+}
